# chronosync

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.test-e2e.yml  docker-compose.test-integration.yml  docker-compose.test-perf.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  railway.toml  requirements.txt
backend/.github/workflows/: deploy.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0001_timescale.py  0003_gap_fixes.py  0004_obligation_activity_type.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py  logging.py  metrics.py  middleware.py  scheduler.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  chronotype.py  device.py  education.py  event.py  notification.py  obligation.py  plan.py  refresh_token.py  tracking.py  user.py  user_article_progress.py
backend/app/repositories/: base.py  chronotype_repository.py  device_repository.py  education_repository.py  obligation_repository.py  plan_repository.py  refresh_token_repository.py  tracking_repository.py  user_article_progress_repository.py  user_repository.py
backend/app/schemas/: auth.py  chronotype.py  common.py  education.py  event.py  notification.py  obligation.py  plan.py  tracking.py  user.py
backend/app/services/: auth_service.py  chronotype_service.py  google_oauth.py  notification_service.py  plan_service.py  token_service.py  tracking_service.py  user_service.py
backend/app/utils/: date_utils.py  email.py  meq_scoring.py  tracking_metrics.py
backend/perf/: locustfile.py
backend/scripts/: create_admin.py  init_timescale.sql  seed_education.py
backend/scripts/seed_data/: articles.json  faq.json
backend/tests/: _integration_fixtures.py  conftest.py
backend/tests/e2e/: test_smoke.py
backend/tests/integration/: conftest.py  test_additional_endpoints.py  test_api_endpoints.py  test_onboarding_flow.py  test_scheduler_audit.py  test_timescale_hypertables.py  test_tracking_flow.py  test_tracking_metrics_calculation.py
backend/tests/unit/: conftest.py  test_jwt_security.py  test_meq_parity_vectors.py  test_meq_scoring.py  test_optimization_engine.py  test_plan_repository.py  test_scheduler.py  test_schemas.py  (+2 more)
(+150 files in other folders)
