[tool.poetry]
name = "chronosync-backend"
version = "0.1.0"
description = "ChronoSync backend API"
authors = ["Warp <agent@warp.dev>"]
package-mode = false

[project]
name = "chronosync-backend"
version = "0.1.0"
description = "ChronoSync backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "greenlet>=3.0.3",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "redis>=5.0.7",
    "httpx>=0.27.0",
    "resend>=2.0.0",
    "sentry-sdk>=2.12.0",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.7",
    "ortools>=9.10.4067",
    "python-multipart>=0.0.9",
    "google-auth>=2.32.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",  # Used by TestClient
    "aioresponses>=0.7.6",  # Mock async HTTP calls in tests
    "locust>=2.32.0",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = {extras = ["email"], version = "^2.8.0"}
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.0.7"
httpx = "^0.27.0"
resend = "^2.0.0"
sentry-sdk = "^2.12.0"
prometheus-client = "^0.20.0"
python-json-logger = "^2.0.7"
ortools = "^9.10.4067"
python-multipart = "^0.0.9"
google-auth = "^2.32.0"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# SQLAlchemy model attribute typing is not enforced yet; disable the noisy error code.
disable_error_code = ["var-annotated"]

